<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NoteFragment">

    <Button
        android:id="@+id/buttonAddNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/courseListSpinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/noteTitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Note title"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/courseListSpinner"
        app:layout_constraintStart_toStartOf="@+id/courseListSpinner"
        app:layout_constraintTop_toBottomOf="@+id/noteTitleLabel" />

    <EditText
        android:id="@+id/noteBodyText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Note text"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/noteTitleText"
        app:layout_constraintStart_toStartOf="@+id/noteTitleText"
        app:layout_constraintTop_toBottomOf="@+id/noteBodyLabel" />

    <TextView
        android:id="@+id/noteBodyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Note Text"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/noteBodyText"
        app:layout_constraintTop_toBottomOf="@+id/noteTitleText" />

    <TextView
        android:id="@+id/courseListLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Course List"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/courseListSpinner"
        app:layout_constraintStart_toStartOf="@+id/courseListSpinner" />

    <TextView
        android:id="@+id/noteTitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Note Title"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/courseListSpinner"
        app:layout_constraintTop_toBottomOf="@+id/courseListSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>